# cookiecutter-django-template

./: TODO.txt  cookiecutter.json
hooks/: post_gen_project
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/apps/core/: pagination.py  versioning.py
{{cookiecutter.project_slug}}/apps/logging/: formatters.py
{{cookiecutter.project_slug}}/apps/sms/: __init__.py  backends.py  exceptions.py  sender.py
{{cookiecutter.project_slug}}/apps/users/: admin.py  forms.py  models.py
{{cookiecutter.project_slug}}/apps/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/config/: asgi.py  celery.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py
{{cookiecutter.project_slug}}/locale/az/LC_MESSAGES/: django.po
{{cookiecutter.project_slug}}/locale/en/LC_MESSAGES/: django.po
{{cookiecutter.project_slug}}/locale/ru/LC_MESSAGES/: django.po
